include/bindings.h

struct random_data {
  int32_t *fptr;
  int32_t *rptr;
  int32_t *state;
  int rand_type;
  int rand_deg;
  int rand_sep;
  int32_t *end_ptr;
};
struct drand48_data {
  unsigned short __x[3];
  unsigned short __old_x[3];
  unsigned short __c;
  unsigned short __init;
  unsigned long long __a;
};
extern long random();
extern void srandom(unsigned int __seed);
extern char *initstate(unsigned int __seed, char *__statebuf, uintptr_t __statelen);
extern char *setstate(char *__statebuf);
extern int random_r(random_data *__buf, int32_t *__result);
extern int srandom_r(unsigned int __seed, random_data *__buf);
extern int initstate_r(unsigned int __seed,
                       char *__statebuf,
                       uintptr_t __statelen,
                       random_data *__buf);
extern int setstate_r(char *__statebuf, random_data *__buf);
extern int rand();
extern void srand(unsigned int __seed);
extern int rand_r(unsigned int *__seed);
extern double drand48();
extern double erand48(unsigned short *__xsubi);
extern long lrand48();
extern long nrand48(unsigned short *__xsubi);
extern long mrand48();
extern long jrand48(unsigned short *__xsubi);
extern void srand48(long __seedval);
extern unsigned short *seed48(unsigned short *__seed16v);
extern void lcong48(unsigned short *__param);
extern int drand48_r(drand48_data *__buffer, double *__result);
extern int erand48_r(unsigned short *__xsubi, drand48_data *__buffer, double *__result);
extern int lrand48_r(drand48_data *__buffer, long *__result);
extern int nrand48_r(unsigned short *__xsubi, drand48_data *__buffer, long *__result);
extern int mrand48_r(drand48_data *__buffer, long *__result);
extern int jrand48_r(unsigned short *__xsubi, drand48_data *__buffer, long *__result);
extern int srand48_r(long __seedval, drand48_data *__buffer);
extern int seed48_r(unsigned short *__seed16v, drand48_data *__buffer);
extern int lcong48_r(unsigned short *__param, drand48_data *__buffer);
extern void *malloc(unsigned long __size);
extern void *calloc(unsigned long __nmemb, unsigned long __size);